# 0x1audio

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  compose.dev.yaml  compose.prod.yaml  compose.yaml
apps/backend/: .dockerignore  Dockerfile  Dockerfile.dev  README.md  alembic.ini  config.local.example.yaml  config.yaml  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 33575199a7d7_baseline.py
apps/backend/scripts/: requeue_analysis.py
apps/backend/src/ox1audio_backend/: __init__.py  config.py  db.py  exceptions.py  main.py  models.py  shared_constants.py  storage.py  worker.py
apps/backend/src/ox1audio_backend/api/: artists.py  auth.py  catalog.py  chat.py  deps.py  graph.py  health.py  http.py  playlists.py  router.py  search.py
apps/backend/src/ox1audio_backend/auth/: deps.py  passwords.py  tokens.py
apps/backend/src/ox1audio_backend/ingest/: audio_tags.py  runner.py
apps/backend/src/ox1audio_backend/ml_client/: __init__.py  client.py
apps/backend/src/ox1audio_backend/schemas/: __init__.py  tracks.py
apps/backend/src/ox1audio_backend/services/: artist_images.py  artists.py  catalog.py  chat.py  chat_title.py  covers.py  playlist_colors.py  playlists.py  track_search.py  tracks.py
apps/backend/src/ox1audio_backend/tools/: __init__.py  artists.py  catalog.py  graph.py  langchain.py  playlists.py  registry.py  search.py  serialize.py  types.py
apps/backend/src/tunelink_backend/: __init__.py  audio_tags.py  config.py  covers.py  db.py  main.py  models.py  storage.py  worker.py
apps/backend/src/tunelink_backend/api/: __init__.py  auth.py  catalog.py  chat.py  graph.py  playlists.py  router.py  search.py
apps/backend/src/tunelink_backend/auth/: deps.py  tokens.py
apps/backend/src/tunelink_backend/ingest/: __init__.py  retry.py  runner.py  zip_safe.py
apps/backend/src/tunelink_backend/ml_client/: __init__.py  client.py
apps/backend/src/tunelink_backend/services/: chat.py  playlists.py
apps/backend/src/tunelink_backend/tools/: __init__.py  catalog.py  graph.py  langchain.py  playlists.py  registry.py  search.py  serialize.py  types.py
apps/backend/tests/: conftest.py  test_artists.py  test_chat.py  test_chat_title.py  test_openapi_constants.py  test_playlists.py  test_tools_registry.py  test_track_search.py  test_tracks.py
apps/ml-worker/: .dockerignore  Dockerfile  README.md  config.local.example.yaml  config.yaml  pyproject.toml
apps/ml-worker/evals/: golden_queries.json  relevant_calm_ambient_muq.json  results_after.json  results_before.json  score_golden.py
apps/ml-worker/scripts/: download_essentia_models.py  download_short_chunk_model.py
apps/ml-worker/src/ox1audio_ml_worker/: __init__.py  __main__.py  config.py  operations.py  server.py
apps/ml-worker/src/ox1audio_ml_worker/audio/: __init__.py  affect.py  analysis.py  download.py  essentia.py  (+1 more)
apps/ml-worker/src/tunelink_ml_worker/: __init__.py  __main__.py  config.py  operations.py  server.py
(+120 files in other folders)
