[project]
name = "ox1audio-backend"
version = "0.1.0"
description = "0x1audio FastAPI control plane"
requires-python = ">=3.12"
dependencies = [
  "authlib>=1.0.0",
  "email-validator>=2.2.0",
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "joserfc>=1.0.0",
  "pwdlib[argon2]>=0.2.0",
  "pydantic-settings[yaml]>=2.6.0",
  "sqlalchemy[asyncio]>=2.0.36",
  "asyncpg>=0.30.0",
  "uvicorn[standard]>=0.32.0",
  "minio>=7.2.20",
  "python-multipart>=0.0.32",
  "grpcio>=1.82.1",
  "protobuf>=7.35.1",
  "mutagen>=1.48.1",
  "pillow>=11.0.0",
  "langchain-core>=0.3.0",
  "langchain-ollama>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ox1audio_backend"]

[dependency-groups]
dev = [
  "alembic>=1.14.0",
  "basedpyright>=1.28.0",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=6.0.0",
  "ruff>=0.9.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.basedpyright]
typeCheckingMode = "basic"
pythonVersion = "3.12"
extraPaths = ["src"]
reportMissingImports = "warning"
reportUnusedImport = false
