[project]
name = "ox1audio-ml-worker"
version = "0.1.0"
description = "0x1audio gRPC ML worker"
# 3.11 matches pytorch/pytorch CUDA images; 3.12 ok for local host tooling.
requires-python = ">=3.11,<3.13"
dependencies = [
  "grpcio>=1.68.0",
  "protobuf>=5.28.0",
  "pydantic-settings[yaml]>=2.6.0",
  "qdrant-client>=1.15.0,<1.16",
  "requests>=2.32,<3",
  "numpy>=1.26,<2",
  "librosa>=0.10.1,<0.11",
  "soundfile>=0.13,<0.14",
  "muq==0.1.0",
  "huggingface-hub>=0.34,<1",
  "transformers>=4.51,<5",
  # Provided by the CUDA base image in Docker; keep for local uv sync.
  "torch>=2.5,<3",
  "essentia-tensorflow==2.1b6.dev1389",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ox1audio_ml_worker"]
